Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7213

QGLWidget::renderPixmap doesn't work while using textures

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.6.2
    • 4.6.0
    • GUI: OpenGL
    • None
    • windows xp and vista
    • 9baeb2fc297a7a30bb467ea0d1986c7fecea2e58

    Description

      Creating a pixmap from a QGLWidget using renderPixmap creates a black and white image and the following debug info:

      texture upload failed, error 0x500

      can be tested with example/opengl/texture by adding
      renderPixmap(1000,1000) to GlWidget::mousePressEvent

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kjernase Trond Kjernåsen (Inactive)
            martin37 Martin Wenderoth
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes