Fix QGLWidget::renderPixmap() on Windows.

Using renderPixmap() with scenes that contained textures might not work
due to the wrong texture format being used under certain circumstances.

Task-number: QTBUG-7213
Reviewed-by: Gunnar